# humans_nav

./: CMakeLists.txt  package.xml
cfg/: humans.cfg
config/: custom_rosconsole.conf
humans_nav/: CMakeLists.txt  libhumans_nav.xml  package.xml
humans_nav/config/: planner_costmap_params.yaml
humans_nav/include/humans_nav/: humans_nav.h  planner_interface.h  types.h
humans_nav/launch/: humans_joy.launch  morse_humans.launch  move_humans.launch  optitrack_humans.launch
humans_nav/maps/: laas_adream.yaml
humans_nav/msg/: HumanArray.msg  HumanPose.msg
humans_nav/scripts/: .morse_bridge.py.swp  morse_bridge.py  optitrack_human.py
humans_nav/src/: humans_nav.cpp  humans_nav_node.cpp  morse_humans_provider.cpp  ttc_updated.txt
humans_nav/srv/: HumansNavGoal.srv
humans_nav/test/: CMakeLists.txt  package.xml
humans_nav_package/: CMakeLists.txt  package.xml
include/humans_nav/: humans_nav.h  morse_humans_provider.h
launch/: humans_joy.launch  morse_humans.launch
msg/: HumanMarker.msg
multigoal_planner/: CMakeLists.txt  package.xml  planner_plugin.xml
multigoal_planner/include/multigoal_planner/: multigoal_planner.h
multigoal_planner/src/: multigoal_planner.cpp
scripts/: .ros_msg_test.py.swp  morse_bridge.py
src/: humans_nav.cpp  humans_nav_node.cpp  morse_humans_provider.cpp
